// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`github Invalid Repo 1`] = `
Object {
  "octokit": Array [
    Array [
      Object {
        "auth": "asdf",
      },
    ],
  ],
}
`;

exports[`github Open a pull request 1`] = `
Object {
  "octokit": Array [
    Array [
      Object {
        "auth": "asdf",
      },
    ],
  ],
  "pulls.create": Array [
    Array [
      Object {
        "base": "some-base",
        "head": "some-head",
        "owner": "oooo",
        "repo": "rrrr",
        "title": "some-title",
      },
    ],
  ],
}
`;
